CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(JsonValidator)

INCLUDE_DIRECTORIES(JsonValidator.h)

SET(TEST_MATH ${JsonValidator.cpp})
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -march=native -O3 -pthread" )

FIND_PACKAGE(LibXml2 REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(ICONV MODULE REQUIRED)

ADD_EXECUTABLE(JsonValidator
    JsonValidator.cpp
)